css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Import partials from `sass_dir` (defaults to `_sass`)
// These are the U.S. Design Standards variables (color definitions, etc.)
@import "core/variables";

h1, h2, h3, h4, h5, h6 {
  color: $color-primary-darker;
}

main > article,
main > section,
.ood-banner,
.ood-persona,
.error {
  overflow: auto; /* defeat margin collapse */
}

.usa-disclaimer,
.ood-banner > *,
main > article > * ,
footer {
  padding-left: $site-margins;
  padding-right: $site-margins;
}

.error {
  background-color: $color-gray-cool-light;
  text-align: center;
  min-height: 450px; /* ugly little hack */

  p {
    max-width: none;
  }
}

.ood-banner {
  background-color: $color-primary-darkest;
  background-repeat: no-repeat;
  background-image: url(../img/hero.jpg);
  background-size: cover;
  background-position: center bottom;

  & > * {
    color: $color-white !important;
  }

  & > :first-child {
    margin-top: $grid-margins * 2;
  }

  & > :last-child {
    margin-bottom: $grid-margins * 2;
  }
}

.usa-font-lead {
  color: $color-gray-dark;
}

.usa-grid-full {
  max-width: none;
}

.ood-provider {
  .repo {
    float: right;
    font-size: smaller;
    font-weight: bold;
  }
}

.ood-persona {
  background-color: $color-white;
  border-radius: 3px;
  margin: $grid-margins;
  padding-top: $grid-margins * .75;

  img.ood-persona-head {
    height: 12rem;
    width: 12rem;
    margin: $grid-margins*.5 $grid-margins*.35 $grid-margins*.25 0;
    vertical-align: middle;
  }

  .ood-persona-name {
    color: $color-secondary;
    display: inline-block;
    font-size: 3.5rem;
    margin-top: $grid-margins;
    vertical-align: middle;
  }
}

article {
  padding-bottom: $grid-margins;
}

article.alt {
  background-color: $color-gray-cool-light;
}

.ood-quotation p {
  color: $color-primary-alt-darkest;
  margin: $grid-margins*1.5 auto;
  padding: 0 $site-margins;
}

.usa-background-dark {
  h1, h2, h3, h4, h5, h6 {
    color: $color-white;
  }
}

footer {
  .usa-footer-secondary_section {
    background-color: $color-gray-dark;
    color: $color-white;
    padding-bottom: 0;

    a {
      color: $color-gray-lighter;
    }
  }

  address > :last-child {
    margin-bottom: $site-margins;
  }

  .usa-footer-logo-img {
    max-height: 10rem;
    max-width: 10rem;
    vertical-align: middle;
    margin-right: $grid-margins;
    margin-bottom: $grid-margins;
  }
}

